[package]
name = "apple_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hex = "0.4.3"
hmac = "0.12.1"
jose-jwa = "0.1.2"
jwt = {version= "0.16.0", features = ["openssl"] }
openssl = "0.10.62"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.56"
url = "2.5.0"
